# cyprientaque.com-backend

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  bitbucket-pipelines.yml  docker-compose.yml
migrations/2020-05-31-111157_create_project_categories_table/: down.sql  up.sql
migrations/2020-05-31-113423_create_projects_table/: up.sql
migrations/2020-05-31-114719_create_project_images_table/: down.sql  up.sql
migrations/2020-06-02-162542_create_users_table/: up.sql
migrations/2020-06-02-163425_add_user_id_field_to_projects/: down.sql  up.sql
migrations/2020-06-17-183450_add_timestamps_to_project_categories/: down.sql  up.sql
migrations/2020-06-17-184253_drop_table_password_resets/: up.sql
migrations/2020-06-27-211249_add_constraint_to_profile_user_images_user_id/: down.sql  up.sql
migrations/2020-06-27-223900_add_deleted_at_to_profile_user_images/: down.sql  up.sql
migrations/2020-06-28-113104_add_original_object_url_to_project_images/: down.sql  up.sql
migrations/2020-08-17-204101_add_deleted_at_to_project_image_categories/: down.sql  up.sql
migrations/2020-09-09-151417_add_is_professionnal_project_to_projects_table/: down.sql  up.sql
migrations/2020-09-17-174148_add_bitbucket_project_key_to_projects/: down.sql  up.sql
migrations/2020-10-04-193831_add_colors_to_project_categories/: down.sql  up.sql
migrations/2020-10-14-155423_add_deleted_at_to_project_images/: down.sql  up.sql
migrations/2020-10-15-165614_add_view_count_to_project_images/: down.sql  up.sql
migrations/2020-10-17-135529_add_color_hex_to_project_image_categories/: down.sql  up.sql
migrations/2021-04-27-203755_add_tags_field_to_projects/: down.sql  up.sql
migrations/2021-05-24-154728_add_parent_category_id_to_project_categories/: down.sql  up.sql
migrations/2021-05-24-154728_add_parent_category_id_to_project_categories/src/: schema.rs
migrations/2021-06-02-191001_add_parent_categories_to_db/: down.sql  up.sql
migrations/2021-06-02-192314_add_not_null_on_categories_picture_url/: down.sql  up.sql
migrations/2021-08-14-154342_initial_schema/: down.sql  up.sql
migrations/2022-03-26-103454_add_projects_likes_table/: down.sql  up.sql
rest_macro/: Cargo.toml
rest_macro/src/: lib.rs
rest_macro_derive/: Cargo.toml
rest_macro_derive/src/: lib.rs
src/: .env  lib.rs  main.rs  models.rs  schema.rs
src/command/: cli.rs  mod.rs
src/middleware/: auth_middleware.rs  location_middleware.rs  mod.rs
src/models/: bitbucket.rs  mod.rs  model.rs  profile_user_image.rs  project.rs  project_category.rs  project_image.rs  project_image_category.rs  project_like.rs  s3_client.rs  user.rs  user_token.rs
src/services/: bitbucket.rs
src/utils/: mod.rs  token_utils.rs
static/elm/: elm.json
static/elm/elm-stuff/0.19.1/: AddLike.elmi  AddLike.elmo
static/elm/src/: AddLike.elm
static/react/: elm.d.ts  elm.json  package-lock.json  package.json  react-elm-components.d.ts  tsconfig.json  tslint.json
static/react/config/: paths.js  webpack.config.dev.js  webpack.config.prod.js
static/react/public/: base.html
static/react/src/: App.tsx  index.scss  index.tsx
static/style/: style.css  style.css.map  style.scss
static/templates/: about.hbs  blog_detail.hbs  blog_index.hbs
static/templates/about/: about.hbs  asset-manifest.json  service-worker.js
static/templates/partials/: base.hbs
(+42 files in other folders)
