[package]
name = "ctprods"
version = "0.1.0"
authors = ["Cyprien Taque <cyprien.taque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-http = "2.0.0-alpha.4"
actix-rt = "1.1.1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
slugify = "0.1.0"
futures = "0.3.5"
actix-service = "1.0.5"
jsonwebtoken = "7.1.0"