[package]
name = "ctprods"
version = "0.1.0"
authors = ["Cyprien Taque <cyprien.taque@gmail.com>"]
edition = "2018"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "^0.4"
tokio = "0.2.21"
actix-web = { version="2", features=["rust-tls"] }
actix-http = "2.0.0-alpha.4"
actix-multipart = "0.2.0"
actix-cors = "0.2.0-alpha.1"
actix-rt = "1.1.1"
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3.16"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
slugify = "0.1.0"
futures = "0.3.5"
actix-service = "1.0.5"
jsonwebtoken = "7.1.0"
postgres = { version = "0.17.3", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4", "with-serde_json-1"] }
async-trait = "0.1.33"
rusoto_core = "0.44.0"
rusoto_sqs = "0.44.0"
rusoto_s3 = "0.44.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["json"] }