[package]
name = "rest_macro_derive"
version = "0.1.0"
authors = ["Cyprien Taque <Cyprien.taque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.44", features = ["parsing"]}
quote = "1.0"
rest_macro = { version = "0.1.0", path = "../rest_macro" }
actix-web = { version="2", features=["rust-tls"] }
darling = "0.10.2"
proc-macro2 = "1.0.24"

[lib]
proc-macro = true